<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/sportFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sport" />
        <item
            android:id="@+id/healthFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/health" />
        <item
            android:id="@+id/businessFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/business" />
        <item
            android:id="@+id/technologyFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/technology" />

    </group>
</menu>